Fix minor layout issue on login page.

--- a/styles/form.css
+++ b/styles/form.css
@@ -7,6 +7,10 @@ form {
     padding: 20px;
 }
 
+.login {
+    margin: 50px auto 10px auto !important; 
+} 
+
 .required{
     color: red;
 }
