--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,7 @@ a.pull-right::before{
 
 .register-layer {
     width: 85%;
-    margin: 10px auto;
+    margin: auto;
     padding: 20px;
 }
 
